--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-jasmine": "~0.4.2",
     "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-sass": "~0.5.0",
     "grunt-template-jasmine-istanbul": "~0.2.3",
     "grunt-template-jasmine-requirejs": "~0.1.5",
     "grunt": "~0.4.1"
