set up bower properly and added demo

--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,7 @@
 {
-    "directory": "lib"
+    "directory": "lib",
+    "dependencies": {
+        "requirejs": "~2.1.8",
+        "requirejs-domready": "~2.0.1"
+    }
 }
