--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-jasmine": "~0.4.2",
     "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-htmlmin":"~0.1.3",
