--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,7 @@
     "multistr": true,
     "evil": true,
     "globals": {
-        "define": false
+        "require": false,
+        "module": true
     }
 }
