--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-template-jasmine-requirejs": "~0.1.5",
     "grunt": "~0.4.1",
     "browserify": "~3.3.0",
-    "grunt-browserify": "~1.3.0"
+    "grunt-browserify": "~1.3.0",
+    "grunt-istanbul": "~0.2.3"
   }
 }
