--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "grunt": "~0.4.1",
     "browserify": "~3.3.0",
     "grunt-browserify": "~1.3.0",
-    "grunt-istanbul": "~0.2.3"
+    "grunt-istanbul": "~0.2.3",
+    "grunt-debug-task": "~0.1.3",
+    "grunt-lib-phantomjs": "~0.4.0"
   }
 }
