--- a/package.json
+++ b/package.json
@@ -9,22 +9,14 @@
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-watch": "~0.2.0",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-jasmine": "~0.4.2",
-    "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-template-jasmine-istanbul": "~0.2.3",
-    "grunt-template-jasmine-requirejs": "~0.1.5",
     "grunt": "~0.4.1",
-    "browserify": "~3.3.0",
     "grunt-browserify": "~1.3.0",
-    "grunt-istanbul": "~0.2.3",
-    "grunt-debug-task": "~0.1.3",
-    "grunt-lib-phantomjs": "~0.4.0"
+    "grunt-istanbul": "~0.2.3"
   }
 }
