--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-template-jasmine-istanbul": "~0.2.3",
     "grunt": "~0.4.1",
     "grunt-browserify": "~1.3.0",
-    "grunt-istanbul": "~0.2.3"
+    "grunt-istanbul": "~0.2.3",
+    "grunt-contrib-uglify": "~0.2.7"
   }
 }
