--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt jasmine"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.4.3",
