--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
+    "scripts": {
+      "postinstall": "echo postinstall time; ./node_modules/grunt-cli/bin/grunt build"
+    },
     "test": "grunt test"
   },
   "devDependencies": {
@@ -19,5 +22,8 @@
     "grunt-browserify": "~1.3.0",
     "grunt-istanbul": "~0.2.3",
     "grunt-contrib-uglify": "~0.2.7"
+  },
+  "dependencies": {
+    "harp": "^0.12.1"
   }
 }
