--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "jquery-plugin",
+  "name": "on-guard",
   "version": "0.0.0-ignored",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.10.0"
   },
   "scripts": {
-    "scripts": {
-      "postinstall": "echo postinstall time; ./node_modules/grunt-cli/bin/grunt build"
-    },
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-jasmine": "~0.4.2",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-template-jasmine-istanbul": "~0.2.3",
     "grunt": "~0.4.1",
     "grunt-browserify": "~1.3.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-jasmine": "~0.4.2",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "~0.2.0",
     "grunt-istanbul": "~0.2.3",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt-template-jasmine-istanbul": "~0.2.3"
   },
   "dependencies": {
     "harp": "^0.12.1"
